# AgentProof

./: .gitignore  AegisLexer.g4  AegisParser.g4  CLAUDE.md  CONTRIBUTING.md  EXTENSIONS.md  LICENSE  Name Suggestions.md  README.md  SECURITY.md  TESTING.md  TemporalLogicSpecificationsInAegis.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml  staging.yml
aegis-compiler/: CLAUDE.md  Cargo.toml  Name Suggestions.md  README.md  coverage.lcov
aegis-compiler/src/: adapter.rs  aegis.pest  bytecode.rs  cli.rs  lib.rs  lower.rs  main.rs  parser.rs  visitor.rs
aegis-compiler/src/ast/: mod.rs  nodes.rs  span.rs
aegis-compiler/src/checker/: mod.rs
aegis-compiler/src/diagnostics/: mod.rs
aegis-compiler/src/ir/: mod.rs
aegis-compiler/src/types/: mod.rs
aegis-compiler/tests/: adapter_tests.rs  checker_tests.rs  cli_tests.rs  lowering_tests.rs  parse_tests.rs  span_tests.rs
aegis-ffi/: Cargo.toml  build.rs  cbindgen.toml
aegis-ffi/src/: lib.rs
aegis-runtime/: CLAUDE.md  Cargo.toml  README.md
aegis-runtime/benches/: eval_bench.rs
aegis-runtime/src/: audit.rs  engine.rs  eval.rs  event.rs  lib.rs
aegis-runtime/tests/: audit_tests.rs  e2e_tests.rs  engine_tests.rs  eval_tests.rs  latency_tests.rs
aegis-vscode/: .vscodeignore  LICENSE  README.md  aegis-language-0.1.0.vsix  language-configuration.json  package-lock.json  package.json  tsconfig.json
aegis-vscode/icons/: aegis-icon-theme.json
aegis-vscode/snippets/: aegis.code-snippets
aegis-vscode/src/: extension.ts
aegis-vscode/syntaxes/: aegis.tmLanguage.json
agentproof-python/: CLAUDE.md  Cargo.toml  README.md  pyproject.toml
agentproof-python/python/aegis_enforce/: __init__.py  _enforce.py  _engine.py  _interceptors.py
agentproof-python/python/agentproof/: __init__.py  _enforce.py
agentproof-python/src/: lib.rs
agentproof-python/tests/: conftest.py  test_enforce.py  test_engine.py  test_interceptors.py
automaguard-dotnet/: AutomaGuard.sln
automaguard-dotnet/src/AutomaGuard/: AutomaGuard.csproj  EnforcementException.cs  INativeEngine.cs  NativeLibraryLoader.cs  NativeMethods.cs  PolicyEngine.cs  PolicyResult.cs  RealNativeEngine.cs
automaguard-dotnet/src/AutomaGuard.SemanticKernel/: AutomaGuard.SemanticKernel.csproj  AutomaGuardFunctionFilter.cs  KernelBuilderExtensions.cs
automaguard-dotnet/tests/AutomaGuard.SemanticKernel.Tests/: AutomaGuard.SemanticKernel.Tests.csproj  AutomaGuardFunctionFilterTests.cs
automaguard-dotnet/tests/AutomaGuard.Tests/: AutomaGuard.Tests.csproj  EnforcementExceptionTests.cs  FakeNativeEngine.cs  Fixtures.cs  PolicyEngineTests.cs  PolicyResultJsonTests.cs
automaguard-go/: automaguard.go  automaguard_test.go  engine_cgo.go  engine_nocgo.go  engine_test.go  go.mod  result.go
automaguard-go/include/: aegis.h
automaguard-java/: build.gradle.kts  pom.xml  settings.gradle.kts
automaguard-java/rust/: Cargo.toml
automaguard-java/rust/src/: lib.rs
automaguard-java/src/main/java/io/automaguard/: ConstraintViolation.java  EnforcementException.java  JniNativeBridge.java  NativeBridge.java  NativeLoader.java  PolicyEngine.java  PolicyResult.java  Verdict.java  Violation.java
automaguard-java/src/main/java/io/automaguard/langchain4j/: AutomaGuardToolFilter.java
automaguard-java/src/main/java/io/automaguard/springai/: AutomaGuardAdvisor.java
automaguard-java/src/main/kotlin/io/automaguard/: Extensions.kt
automaguard-java/src/test/java/io/automaguard/: FakeNativeBridge.java  Fixtures.java  PolicyEngineTest.java  PolicyResultTest.java
automaguard-mcp-proxy/: Cargo.toml
automaguard-mcp-proxy/src/: bridge.rs  error.rs  jsonrpc.rs  main.rs  proxy.rs
automaguard-python/: CLAUDE.md  Cargo.toml  README.md  pyproject.toml
automaguard-python/python/aegis_enforce/: __init__.py  _enforce.py  _engine.py  _interceptors.py
automaguard-python/src/: lib.rs
automaguard-python/tests/: conftest.py  test_enforce.py  test_engine.py  test_interceptors.py  test_native_integration.py  test_policy_result.py
automaguard-rs/: Cargo.toml
automaguard-rs/src/: async_engine.rs  engine.rs  error.rs  lib.rs
automaguard-rs/tests/: integration.rs
automaguard-ts/: Cargo.toml  index.d.ts  index.d.ts.map  index.js  index.js.map  jest.config.js  langchain.d.ts  langchain.d.ts.map  langchain.js  langchain.js.map  openai.d.ts  openai.d.ts.map  openai.js  openai.js.map  package-lock.json  package.json  tsconfig.json  vercel-ai.d.ts  vercel-ai.d.ts.map  vercel-ai.js  vercel-ai.js.map
automaguard-ts/__tests__/: engine.test.ts  langchain.test.ts  openai.test.ts  vercel-ai.test.ts
automaguard-ts/js/: index.ts  langchain.ts  openai.ts  vercel-ai.ts
automaguard-ts/src/: lib.rs
dashboard/: package-lock.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/audit/: route.ts
dashboard/components/: AuditTable.tsx  LatencyChart.tsx  StatCard.tsx  VerdictBadge.tsx  VerdictChart.tsx
dashboard/lib/: types.ts
docs/: aegis-language-reference.md  future-language-implementation.md  incident-replay.md
examples/: customer_data_guard.aegis  data_exfiltration_guard.aegis  demo_all.sh  research_guard.aegis
examples/dotnet/: Agent.cs  CustomerDataAssistant.csproj  Prompts.cs  Tools.cs  demo.sh
examples/go/: demo.sh  go.mod  main.go  prompts.go  tools.go
examples/java/: demo.sh  pom.xml
examples/java/src/main/java/io/automaguard/example/: Agent.java  CustomerDataTools.java  Prompts.java
examples/python/: agent.py  demo.sh  prompts.py  requirements.txt  stress.py  tools.py
examples/rust/: Cargo.toml  demo.sh
examples/rust/src/: main.rs  prompts.rs  tools.rs
examples/typescript/: demo.sh  package-lock.json  package.json  tsconfig.json
examples/typescript/src/: agent.ts  prompts.ts  stress.ts  tools.ts
paper/: automaguard.aux  automaguard.bbl  automaguard.bib  automaguard.blg  automaguard.out  automaguard.tex  comment.cut
paper/Research/: 2603.20356v1.pdf:Zone.Identifier  Formal Method Logic Checkers  TemporalLogicSpecificationsInAegis.md
