[package]
name = "aegis-compiler"
version = "0.1.0"
edition = "2021"
description = "Compiler frontend for the Aegis policy language (AgentProof)"
license = "Apache-2.0"

[[bin]]
name = "aegisc"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
smol_str = { version = "0.2", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"
