[package]
name = "aegis-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime verifier for Aegis policies (AutomaGuard)"
license = "Apache-2.0"

[dependencies]
aegis-compiler = { path = "../aegis-compiler" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str = { version = "0.2", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "eval_bench"
harness = false

[[test]]
name = "latency_tests"
harness = true
