[package]
name = "automaguard-mcp-proxy"
version = "0.1.0"
edition = "2021"
description = "AutomaGuard MCP proxy — zero-touch policy enforcement sidecar for MCP-based AI agents"
license = "Apache-2.0"

[[bin]]
name = "automaguard-mcp-proxy"
path = "src/main.rs"

[dependencies]
aegis-compiler = { path = "../aegis-compiler" }
aegis-runtime   = { path = "../aegis-runtime" }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
smol_str        = { version = "0.2", features = ["serde"] }
thiserror       = "1"
tokio           = { version = "1", features = ["rt-multi-thread", "io-util", "process", "sync", "macros", "io-std"] }
clap            = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
