[package]
name = "automaguard-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for the AutomaGuard runtime verifier"
license = "Apache-2.0"

[lib]
name = "_automaguard_core"
crate-type = ["cdylib"]

[dependencies]
aegis-compiler = { path = "../aegis-compiler" }
aegis-runtime = { path = "../aegis-runtime" }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1"
smol_str = { version = "0.2", features = ["serde"] }
