[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aegis-enforce"
version = "0.1.0"
description = "Runtime policy enforcement for AI agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
keywords = ["ai", "agents", "safety", "policy", "verification"]

[project.optional-dependencies]
openai = ["openai>=1.0"]
langchain = ["langchain-core>=0.1"]
dev = ["pytest", "pytest-asyncio", "openai", "langchain-core"]

[tool.maturin]
python-source = "python"
module-name = "aegis_enforce._automaguard_core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]
