[package]
name = "customer-data-assistant"
version = "0.1.0"
edition = "2021"
description = "AutomaGuard Rust SDK example — Customer Data Assistant"

[[bin]]
name = "customer_agent"
path = "src/main.rs"

[dependencies]
automaguard = { path = "../../automaguard-rs", features = ["async"] }
smol_str    = "0.2"
tokio       = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow      = "1"
